--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ h1 {
       height: auto;
       pointer-events: none;
     }
-    .hat-icon img { width: 100%; height: auto; display: block; }
-    @media (max-width:640px) { .formation-layout { gap:16px; } }
+  /*  .hat-icon img { width: 100%; height: auto; display: block; }
+    @media (max-width:640px) { .formation-layout { gap:16px; } } */
 
     /* ===== MODAL ===== */
   .modal {
@@ -390,13 +390,13 @@ function injectShirtsIntoTeam(teamEl){
     w.appendChild(clone);
   });
 }
-
+/*
 function injectSantaHats(teamEl){
   const hats=teamEl.querySelectorAll('.hat-icon');
   hats.forEach(h=>{
     h.innerHTML='<img src="santa_hat.png" alt="Santa Hat">';
   });
-}
+} */
 
 function renderTeams(teams,teamSize,subsPerTeam){
   const teamNames=["The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins","The Slap and Tickles"];
