--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@ h1 {
     .shirt-icon svg { width: 100%; height: 100%; display:block; preserveAspectRatio: xMidYMid meet; color: var(--team-colour); }
     .shirt-icon svg [fill] { fill: currentColor; }
     .player-name { margin-top:6px; font-weight:600; text-align:center; }
-   /* .hat-icon {
+    .hat-icon {
       position: absolute;
       top: -15px;
       left: 50%;
       transform: translateX(-50%);
       width: 40px;
       height: auto;
-      pointer-events: none; */
+      pointer-events: none; 
     }
-  /*  .hat-icon img { width: 100%; height: auto; display: block; }
-    @media (max-width:640px) { .formation-layout { gap:16px; } } */
+    .hat-icon img { width: 100%; height: auto; display: block; }
+    @media (max-width:640px) { .formation-layout { gap:16px; } } 
 
     /* ===== MODAL ===== */
   .modal {
