--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ function renderTeams(teams,teamSize,subsPerTeam){
     const teamColour=teamEl.style.getPropertyValue('--team-colour')||'#3a52a3';
     teamEl.style.setProperty('--team-colour',teamColour.trim());
     injectShirtsIntoTeam(teamEl);
-    injectSantaHats(teamEl);
+   // injectSantaHats(teamEl);
   });
 }
 
